@@ -1,5 +1,7 @@
 Changelog for Discuss.
 
+- Hot fix XSS in the search controller (date_start, date_end).
+- Hot fix XSS in the index controller (page).
 - Increase size of disPost.message field to mediumtext.
 - Merge in various updates primarily related to search and solr.
 
